<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dip"
    android:layout_height="wrap_content"
    android:padding="25dip"
    android:background="#540115"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/ad_popupMsg"
        android:textColor="#CDC092" />

    <TextView
        android:id="@+id/url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="20dip"
        android:layout_marginBottom="30dip"
        android:text=""
        android:textColor="#CDC092"
        android:textColorLink="#576586" />
    
    <TextView
        android:id="@+id/disclaimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/url"
        android:layout_centerHorizontal="true"
        android:text="@string/ad_disclaimer"
        android:textColor="#CDC092"
        android:textSize="10sp" 
        android:layout_marginBottom="10dip"
        />

    <Button
        android:id="@+id/popupbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/disclaimer"
        android:layout_centerHorizontal="true"
        android:minHeight="0dp"
        android:onClick="popupClose"
        android:text="@string/close"
        android:textSize="12sp" />


</RelativeLayout>